--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itext-pdfa-5.5.0-javadoc.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itext-pdfa-5.5.0-sources.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itext-pdfa-5.5.0.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itext-xtra-5.5.0-javadoc.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itext-xtra-5.5.0-sources.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itext-xtra-5.5.0.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itextpdf-5.5.0-javadoc.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itextpdf-5.5.0-sources.jar"/>
+	<classpathentry kind="var" path="3rdparty-jar/itext/itextpdf-5.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
